--- a/index.html/index.html
+++ b/index.html/index.html
@@ -6,13 +6,13 @@
             <title>
                 My E-Portfolio
             </title>
-            <link rel="stylesheet" type="text/css" href="index.css">
+            <link rel="stylesheet" type="text/css" href="css/index.css">
         
         </head>
         <body>
             <section>
                 <nav>
-                    
+                    <a href="#" class="logo">FT Portfolio</a>
                     <ul>
                         <li><a href="#" class="active">Home</a></li>
                         <li><a href="#">About</a></li>
