some style are added

--- a/index.html/index.html
+++ b/index.html/index.html
@@ -6,7 +6,7 @@
             <title>
                 My E-Portfolio
             </title>
-            <link rel="stylesheet" type="text/css" href="css/index.css">
+            <link rel="stylesheet" type="text/css" href="index.css/index.css">
         
         </head>
         <body>
@@ -20,7 +20,7 @@
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </nav>
-                <div class="text-container">
+                <div class="text1-body">
                     <p>Hello,</p>
                     <p>I am Floride Tuyisenge</p>
                     <p>I am a Full Stack Developer</p>
