--- a/index.html/index.html
+++ b/index.html/index.html
@@ -6,7 +6,7 @@
             <title>
                 My E-Portfolio
             </title>
-            <link rel="stylesheet" type="text/css" href="index.css/index.css">
+            <link rel="stylesheet" type="text/css" href="css/index.css">
         
         </head>
         <body>
