added some styles by reducing the height and replace the class name

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                     <a  href="#" class="hire-btn">About me</a>
                     <a href="#" class="down-cv" >My Project</a>
                 </div>
-                <img src="https://cdn.pixabay.com/photo/2018/08/15/09/52/programmer-3607627_960_720.png" class="model" alt="model">
+                <img src="https://cdn.pixabay.com/photo/2018/08/15/09/52/programmer-3607627_960_720.png" class="vector" alt="model">
     
     
             </section>
