--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
             </div>
             
         </div>
+        <div class="contact-me">
+            <p>Let's keep in touch on the following contacts</p>
+        </div>
 
         </body>
 </html>
