--- a/index.html
+++ b/index.html
@@ -71,6 +71,9 @@
         </div>
         <div class="contact-me">
             <p>Let's keep in touch on the following contacts</p>
+            <i class="fa fa-phone"> +250780674917</i><br>
+            <a class="ema" href="https://mail.google.com/mail/u/0/#inbox"><i class="fa fa-envelope"> info@ehrent.rw</i></a><br>
+            <i class="material-icons">add_location</i>Rwanda, Karongi district 
         </div>
 
         </body>
