--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
                 My E-Portfolio
             </title>
             <link rel="stylesheet" type="text/css" href="css/index.css">
+            <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+            <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
         
         </head>
         <body>
