changed location icon and applied some css style

--- a/index.html
+++ b/index.html
@@ -76,7 +76,8 @@
             <p>Let's keep in touch on the following contacts</p>
             <i class="fa fa-phone"> +250780674917</i><br>
             <a class="ema" href="https://mail.google.com/mail/u/0/#inbox"><i class="fa fa-envelope"> info@ehrent.rw</i></a><br>
-            <i class="material-icons">add_location</i><p>Rwanda, Karongi district <p>
+            <i class="fa fa-map-marker">Rwanda, Karongi district</i>
+            
         </div>
 
         </body>
