added footer and paragaraph

--- a/index.html
+++ b/index.html
@@ -77,8 +77,13 @@
             <i class="fa fa-phone"> +250780674917</i><br>
             <a class="ema" href="https://mail.google.com/mail/u/0/#inbox"><i class="fa fa-envelope"> info@ehrent.rw</i></a><br>
             <i class="fa fa-map-marker">Rwanda, Karongi district</i>
-            
         </div>
+        <footer>
+            <p>FT E-Portfolio</p>
+            <p> I got motivation in web and mob app design and I am looking forward to meet with so many developers and people 
+                wish to own best projects. I am always here to share with world the skills I gained.
+            </p>
+        </footer>
 
         </body>
 </html>
