added icons for social media and styles in css

--- a/index.html
+++ b/index.html
@@ -83,6 +83,12 @@
             <p> I got motivation in web and mob app design and I am looking forward to meet with so many developers and people 
                 wish to own best projects. I am always here to share with world the skills I gained.
             </p>
+            <div class="social-icons">
+                <a href="#"><i class="fa fa-facebook"></i></a>
+                <a href="#"><i class="fa fa-twitter"></i></a>
+                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="#"><i class="fa fa-instagram"></i></a>
+            </div>
         </footer>
 
         </body>
