added copyright and othere icons for social media in html file

--- a/index.html
+++ b/index.html
@@ -89,7 +89,14 @@
                 <a href="#"><i class="fa fa-linkedin"></i></a>
                 <a href="#"><i class="fa fa-instagram"></i></a>
             </div>
+            <p class="copyright">&copy; 202 FT E-Portfolio</p>
         </footer>
-
+        <div class="social-b">
+        <a href="#"><i class="fa fa-facebook"></i></a>
+        <a href="#"><i class="fa fa-twitter"></i></a>
+        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="#"><i class="fa fa-instagram"></i></a>
+        </div>
         </body>
+        
 </html>
