added ccs styles for copyright and other icons and changed some class and css style

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                         <li><a href="#">Contact Us</a></li>
                     </ul>
                 </nav>
-                <div class="text1-body">
+                <div class="text-container">
                     <p>Hello,</p>
                     <p>I am Floride Tuyisenge</p>
                     <p>I am a Full Stack Developer</p>
@@ -86,7 +86,7 @@
             <div class="social-icons">
                 <a href="#"><i class="fa fa-facebook"></i></a>
                 <a href="#"><i class="fa fa-twitter"></i></a>
-                <a href="#"><i class="fa fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/in/floride-tuyisenge-356b89183/" target="blank"><i class="fa fa-linkedin"></i></a>
                 <a href="#"><i class="fa fa-instagram"></i></a>
             </div>
             <p class="copyright">&copy; 202 FT E-Portfolio</p>
@@ -94,9 +94,9 @@
         <div class="social-b">
         <a href="#"><i class="fa fa-facebook"></i></a>
         <a href="#"><i class="fa fa-twitter"></i></a>
-        <a href="#"><i class="fa fa-linkedin"></i></a>
+        <a href="https://www.linkedin.com/in/floride-tuyisenge-356b89183/" target="blank"><i class="fa fa-linkedin"></i></a>
         <a href="#"><i class="fa fa-instagram"></i></a>
         </div>
         </body>
-        
+
 </html>
