--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             <div class="about-container">
                 <img src="https://i.postimg.cc/QMgkvfSg/films.jpg" alt="my pic">
                 <div class="about-text">
-                    <p>About Me</p>
+                    <p>About Us</p>
                     <p>A Full Stack Developer</p>
                     <p>I am an enthusiastic, self-motivated, responsible, and hardworking lady who pursued Information System at Akilah Campus and attended Moringa School for coding skills. I am experienced in Information System, Website design, and mobile application development. </p>
                     <p>I have decided to join a class on programming because I believed that programming is the concept that enables everyone to think outside of box. 
